syntax = "proto3";
package freym.auth.management;

message DeploySchemaRequest {
	int64 deployment_id = 1;
	string namespace = 2;
	repeated string permissions = 3;
	DeploymentOptions options = 4;
}

message DeploySchemaResponse {}

message ActivateSchemaRequest {
	int64 deployment_id = 1;
}

message ActivateSchemaResponse {}

message ConfirmSchemaRequest {
	int64 deployment_id = 1;
}

message ConfirmSchemaResponse {}

message RollbackSchemaRequest {
	int64 deployment_id = 1;
}

message RollbackSchemaResponse {}

message GetSchemaDeploymentRequest {
	int64 deployment_id = 1;
}

message GetSchemaDeploymentResponse {
	uint32 progress = 1;
}

message DeploymentOptions {
	DeploymentTarget target = 1;
	bool force = 2;
}

enum DeploymentTarget {
	DEPLOYMENT_TARGET_BLUE = 0;
	DEPLOYMENT_TARGET_GREEN = 1;
}
